--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 
 <header>
-<h1>ELETRONIC STORE</h1> <!-- -->
+<h1 class="cabecalho">ELETRONIC STORE</h1> <!--refere-se a uma tag de título -->
     
- <ul>
- <li>USARIO</li>
-   <li>QUEM SOMOS</li> 
-<li>+ produtos</li>
+ <ul> <!-- lista não ordenada-->
+      <li class="cabecalho-lista-1">USARIO</li>
+      <li class="cabecalho-lista-1">QUEM SOMOS</li> 
+      <li class="cabecalho-lista-1">+ produtos</li>
     
- <li>saiba</li>  
-<li> promoções</li>
-<li>meus pedidos</li>
+      <li class="cabecalho-lista-2">saiba</li>  
+      <li class="cabecalho-lista-2"> promoções</li>
+      <li class="cabecalho-lista-2">meus pedidos</li>
 </ul>
 
 </header>
