--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <p>Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
     <p>Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
 
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img class = "arduino" src="" alt="">
+    <img class = "protoboard" src="" alt="">
+    <img class = "multimetro" src="" alt="">
 
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img class = "capacitor" src="" alt="">
+    <img class = "sensor-LDR " src="" alt="">
+    <img class = "LED" src="" alt="">
  
