--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 </header>
 
 <body>
-    <h2>SOBRE A NOSSA LOJA</h2>
+    <h2 class = " " >SOBRE A NOSSA LOJA</h2>
 
-    <p>Temos como intuito em oferecer os melhores serviçoes e os melhores componentes eletronicos para a construução do seu circuito</p>
-    <p>Temos certificado de qualidade NBR dos nossos produtos.</p>
-    <p>faça-nos uma visita e conheça o que nossa loja tem para te ofereçer.</p>
+    <p class = " ">Temos como intuito em oferecer os melhores serviçoes e os melhores componentes eletronicos para a construução do seu circuito</p>
+    <p class = " ">Temos certificado de qualidade NBR dos nossos produtos.</p>
+    <p class = " ">faça-nos uma visita e conheça o que nossa loja tem para te ofereçer.</p>
 
-    <h3>Como adquirir nossos produtos</h3>
+    <h3 class = " ">Como adquirir nossos produtos</h3>
 
-    <p>Para garantir nossos produtos excluisivos e promoções, a todo momento,seja um assinantes.
-    <p>Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
-    <p>Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
+    <p class = " ">Para garantir nossos produtos excluisivos e promoções, a todo momento,seja um assinantes.
+    <p class = " ">Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
+    <p class = " ">Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
 
     <img class = "arduino" src="" alt="">
     <img class = "protoboard" src="" alt="">
@@ -41,4 +41,10 @@
     <img class = "capacitor" src="" alt="">
     <img class = "sensor-LDR " src="" alt="">
     <img class = "LED" src="" alt="">
+
+<footer>
+
+</footer>
  
+</body>
+</html>
