--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ELETRONIC STORE</title>
-</head>
+     <link rel = "stylesheet" href="style.css">
 
 <header>
 <h1 class="cabecalho">ELETRONIC STORE</h1> <!--refere-se a uma tag de título -->
@@ -34,7 +34,7 @@
     <p class = " ">Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
     <p class = " ">Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
 
-    <img class = "arduino" src="" alt="">
+    <img class = "arduino" src="./IMAGENS/cf59f0896e.webp" alt="">
     <img class = "protoboard" src="" alt="">
     <img class = "multimetro" src="" alt="">
 
