--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p class = " ">Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
     <p class = " ">Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
 
-    <img class = "arduino" src="./IMAGENS/cf59f0896e.webp" alt="">
+    <img class = "arduino" src="./IMAGENS/470uf-xngofv.jpg" alt="">
     <img class = "protoboard" src="" alt="">
     <img class = "multimetro" src="" alt="">
 
