--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <p class = " ">Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
     <p class = " ">Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
 
-    <img class = "arduino" src="./IMAGENS/cf59f0896e.webp" alt="">
-    <img class = "protoboard" src="" alt="">
+    <img class = "arduino" src="./" alt="">
+    <img class = "protoboard" src="./IMAGENS/protoboard_400_pontos_132_1_d8d53314bf0bd8c010e96bca4b8d4f53.web" alt="">
     <img class = "multimetro" src="" alt="">
 
     <img class = "capacitor" src="" alt="">
