--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <img class = "arduino" src="./" alt="">
     <img class = "protoboard" src="./IMAGENS/protoboard_400_pontos_132_1_d8d53314bf0bd8c010e96bca4b8d4f53.web" alt="">
-    <img class = "multimetro" src="" alt="">
+    <img class = "multimetro" src="IMAGENS/multimetro_digital_dt830b_1537_1_d7a76410b3c774a93002757bd7625292_20240109102843.webp" alt="">
 
     <img class = "capacitor" src="" alt="">
     <img class = "sensor-LDR " src="" alt="">
