--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <img class = "multimetro" src="./IMAGENS/multimetro_digital_dt830b_1537_1_d7a76410b3c774a93002757bd7625292_20240109102843.webp" alt="">
 
     <img class = "capacitor" src="/IMAGENS/1941435412328b077d.webp" alt="">
-    <img class = "sensor-LDR " src="" alt="">
-    <img class = "LED" src="" alt="">
+    <img class = "sensor-LDR " src="/IMAGENS/cf59f0896e.webp" alt="">
+    <img class = "LED" src="/IMAGENS/470uf-xngofv.jpg" alt="">
 
 <footer>
 
