--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <p class = " ">Basta clicar no link abaixo em "saiba +" e voce  será redirecionado para uma nova aba para assinatura</p>    
     <p class = " ">Não perca tempo e seja um assinante da nossa loja de eletronicos</p>
 
-    <img class = "arduino" src="./" alt="">
-    <img class = "protoboard" src="IMAGENS/protoboard_400_pontos_132_1_d8d53314bf0bd8c010e96bca4b8d4f53.web" alt="">
+    <img class = "arduino" src="./IMAGENS/placa_uno_smd_r3_atmega328_sem_cabo_compativel_para_arduino_773_1_20200818190844.webp" alt="">
+    <img class = "protoboard" src="./IMAGENS/protoboard_400_pontos_132_1_d8d53314bf0bd8c010e96bca4b8d4f53.webp" alt="">
     <img class = "multimetro" src="./IMAGENS/multimetro_digital_dt830b_1537_1_d7a76410b3c774a93002757bd7625292_20240109102843.webp" alt="">
 
     <img class = "capacitor" src="/IMAGENS/1941435412328b077d.webp" alt="">
@@ -50,7 +50,7 @@
       <P> Para mais informações entre em contato com o nosso telefone</P>
       <p>Telefone (42) 9 9945-2304</p>
       <p>Nossas redes sociais:</p>
-      <a href="https://www.instagram.com/"></a> <p>Instagram: @eletronic_store</p>
-<a> <p> facebook: Eletronic store</p> </a>
-</body>
+<button> <a href="https://www.instagram.com/"> <p>Instagram: @eletronic_store</p> </a> </button>
+<button> <a href="https://www.facebook.com/?locale=pt_BR "><p> facebook: Eletronic Store</p> </a> </button>
+<body
 </html>
